--- a/Capstone 1 - EDA.ipynb
+++ b/Capstone 1 - EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -413,16 +413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x218e351b348>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x152094ae648>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x218e3587f08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1520952a388>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -477,16 +477,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x218e2be9a88>"
+       "<seaborn.axisgrid.PairGrid at 0x15209583708>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -643,9 +643,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -663,6 +663,205 @@
    ],
    "source": [
     "decompose_time_series(ts_first_review, title='Number of Airbnb listings getting their first review each month')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_**4. How do Airbnb prices correlate with the number of people a listing\n",
+    "accommodates?**_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_price' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-17e9c0ab48a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpivot_price\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpivot_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_price\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'price'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'accommodates'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpivot_price\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlinestyle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'none'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmarkersize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtered_price' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pivot_price = pd.pivot_table(filtered_price, values='price', index='accommodates')\n",
+    "plt.plot(pivot_price, linestyle='none', marker='.', markersize=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivot_price = pd.pivot_table(filtered_price, values='price', index='accommodates', aggfunc='median')\n",
+    "plt.plot(pivot_price, linestyle='none', marker='.', markersize=30, color='b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_**5. How favorable are reviews and what do the distributions look like?**_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def category_count_plot(col, figsize=(8,4)):\n",
+    "    \"\"\"\n",
+    "    Plots a simple bar chart of the total count for each category in the column specified.\n",
+    "    A figure size can optionally be specified.\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=figsize)\n",
+    "    df[col].value_counts().plot(kind='bar')\n",
+    "    plt.title(col)\n",
+    "    plt.xticks(rotation=0)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(8,5))\n",
+    "ax.set_title('Count of Listing Ratings', fontsize=14)\n",
+    "df['review_scores_rating'].value_counts().sort_index(ascending=False).plot(kind='bar', ax=ax)\n",
+    "ax.set_ylabel('Number of properties', fontsize=13)\n",
+    "ax.set_xticklabels(labels=['No Reviews', '95-100%', '80-94%', '0-79%'], rotation=0)\n",
+    "ax.set_xlabel('')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is clear that in general, people give high review scores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in list(df.columns[df.columns.str.startswith(\"review_scores\") == True]):\n",
+    "    category_count_plot(col, figsize=(5,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_**6. What are the most common amenities, and which amenities are likely to increase**_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title('Most Common Amenities', size=30)\n",
+    "plt.ylabel('Count of Amenity in Dataset', size=20)\n",
+    "ax = df.iloc[:,42:65].sum().sort_values(ascending=False).plot(kind='bar', color='b')\n",
+    "ax.tick_params(axis=\"x\", labelsize=20)\n",
+    "ax.tick_params(axis=\"y\", labelsize=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_count_and_price_plot(col, figsize=(8,3)):\n",
+    "    \"\"\"\n",
+    "    Plots a simple bar chart of the counts of true and false categories in the column specified,\n",
+    "    next to a bar chart of the median price for each category.\n",
+    "    A figure size can optionally be specified.\n",
+    "    \"\"\"\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=figsize)\n",
+    "    fig.suptitle(col, fontsize=16, y=1)\n",
+    "    plt.subplots_adjust(top=0.75) # So that the suptitle does not overlap with the ax plot titles\n",
+    "    \n",
+    "    df.groupby(col).size().plot(kind='bar', ax=ax1, color=['firebrick', 'seagreen'])\n",
+    "    ax1.set_xticklabels(labels=['false', 'true'], rotation=0)\n",
+    "    ax1.set_title('Category count', size=10)\n",
+    "    ax1.set_xlabel('')\n",
+    "    \n",
+    "    df.groupby(col).price.median().plot(kind='bar', ax=ax2, color=['firebrick', 'seagreen'])\n",
+    "    ax2.set_xticklabels(labels=['false', 'true'], rotation=0)\n",
+    "    ax2.set_title('Median price ($)', size=10)\n",
+    "    ax2.set_xlabel('')\n",
+    "    \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for col in df.iloc[:,42:65].columns:\n",
+    "    binary_count_and_price_plot(col, figsize=(6,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_**7. What is the value of being a superhost? Is it worth getting verified?**_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_count_and_price_plot('host_is_superhost')\n",
+    "print(df.host_is_superhost.value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "binary_count_and_price_plot('host_identity_verified')\n",
+    "print(df.host_identity_verified.value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "binary_count_and_price_plot('instant_bookable')\n",
+    "print(df.instant_bookable.value_counts(normalize=True))"
    ]
   },
   {
